# ella.printfiverules

./: README.md  pyproject.toml  setup.cfg  setup.py
src/printfiverules/: importdata.py  pdfprinter.py  s136.py  s137.py  s138.py  s139.py  s139_temp.py  s140.py  s141.py  s142.py  s143.py  s144.py  s145.py  s146.py
src/printfiverules/resources/fonts/: DGUVMeta-Bold.pkl  DGUVMeta-Normal.pkl  DGUVMeta-NormalItalic.pkl
