[metadata]
# replace with your username:
name = ella.printfiverules
version = 0.0.13
author = Seppo Walther
author_email = seppo.walther@educorvi.de
description = A package to print 5rules in ella
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/educorvi/ella.printfiverules
project_urls =
    Bug Tracker = https://github.com/educorvi/ella.printfiverules/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
